--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 music21==9.1.0
-pandas==2.0.1
-numpy==1.24.3
+pandas==2.2.0
+pyarrow==15.0.0
+numpy>=1.24.3
 requests==2.31.0
 pytest==7.4.3
 scipy==1.11.1
